--- a/demojpa2/demojpa2/src/main/resources/application.properties
+++ b/demojpa2/demojpa2/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/coderhouse?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/coderprueba1?useSSL=false&createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generat-dll=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
